# LinguAI

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  LinguAI.pem  README.md  architecture.py  docker-compose-gpu-nvidia.prod.yml  docker-compose-nvidia.yml  docker-compose.ollama-localhost.dev.yml  docker-compose.ollama-none.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/data_access/: session.py
backend/app/models/: chat_req.py  embeddings.py  embeddings_quiz.py  language.py  list_res.py  llm.py  llm_list_res.py  persona.py  polyglot_puzzle.py
backend/app/repositories/: address_repository.py  base_repository.py  content_repository.py  language_repository.py  prompt_repository.py  topic_repository.py  user_repository.py
backend/app/schema/: authentication.py  chat.py  content.py  content_gen.py  language.py  list_response.py  password_change.py  persona.py  prompt.py  review_writing.py  rewrite_content.py  skill_level.py  text_to_speech.py  topic.py  user.py  user_assessment.py  user_content.py  user_topic.py
backend/app/services/: address_service.py  chat_service.py  content_gen_service.py  content_service.py  crud_service.py  embeddings_quiz_service.py  embeddings_service.py  joke_service.py  language_service.py  llm_service.py  persona_service.py  polyglot_puzzle_service.py  prompt_service.py  review_writing_service.py  rewrite_content_service.py  skill_level_service.py  text_to_speech_service.py  topic_service.py  user_content_service.py  user_service.py
backend/app/tests/: chat_service_test.py  content_gen_service_test.py  content_service_test.py  language_service_test.py  llm_service_test.py  prompt_service_test.py  review_writing_service_test.py  review_writing_test.py  rewrite_content_service_test.py  skill_level_service_test.py  text_to_speech_service_test.py  topic_service_test.py  user_content_service_test.py  user_service_test.py
backend/app/utils/: logger.py  logger_config.py
frontend/: Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml
frontend/.streamlit/: config.toml
frontend/components/: admin.py  assessment.py  assessments.py  chat.py  content_gen.py  embeddings.py  embeddings_quiz.py  foot_notes.py  header.py  home.py  interest_selection.py  polyglot_puzzle.py  profile.py  register.py  review_writing.py  rewrite_content.py  settings.py  sidebar.py  user.py
frontend/core/: config.py  di.py  http.py  logger.py
frontend/models/: chat_req.py  embeddings.py  embeddings_quiz.py  llm.py  persona.py
frontend/models/common/: chat_message.py  chat_request.py
frontend/models/domain/: embeddings.py  llm.py  persona.py  polyglot_puzzle.py
frontend/models/messages/: chat_message.py
frontend/models/schema/: address.py  content.py  content_gen.py  language.py  user.py
frontend/models/schemas/: authentication.py  content_gen.py  language.py  password_change.py  prompt.py  review_writing.py  skill_level.py  text_to_speech.py  topic.py  user.py  user_assessment.py  user_content.py  user_topic.py
frontend/models/services/: auth_service.py  chat_service.py  content_gen_service.py  content_service.py  embeddings_service.py  language_service.py  llm_service.py  persona_service.py  ping_service.py  polyglot_puzzle_service.py  review_writing_service.py  rewrite_content_service.py  skill_level_service.py  text_to_speech_service.py  topic_service.py  user_content_service.py  user_service.py
frontend/pages/: home.py  settings.py
frontend/schema/: authentication.py  chat.py  content.py  content_gen.py  language.py  persona.py  review_writing.py  rewrite_content.py  topic.py  user.py  user_assessment.py  user_language.py
frontend/services/: address_service.py  chat_service.py  content_gen_service.py  content_service.py  embeddings_quiz_service.py  embeddings_service.py  language_service.py  llm_service.py  notification_service.py  persona_service.py  polyglot_puzzle_service.py  review_writing_service.py  review_writiting.py  rewrite_content_service.py  skill_level_service.py  state_service.py  text_to_speech_service.py  topic_service.py  user_content_service.py  user_service.py
frontend/starter_quizzes/: english_quiz.json  french_quiz.json  german_quiz.json  mandarin_quiz.json  spanish_quiz.json
frontend/tests/: chat_service_test.py  conftest.py  content_gen_test.py  content_service_test.py  language_service_test.py  llm_service_test.py  notification_service_test.py  persona_service_test.py  review_writing_service_test.py  rewrite_content_service_test.py  skill_level_service_test.py  state_service_test.py  text_to_speech_service_test.py  topic_service_test.py  user_content_service_test.py  user_service_test.py
frontend/tests/core/: test_config.py
frontend/tests/integration/: test_vm_tree.py
frontend/tests/viewmodels/: test_app_shell_vm.py
frontend/utils/: api_client.py  http_utils.py  image_utils.py  logger.py  logger_config.py
frontend/viewmodels/: app_shell_vm.py  content_history.py
frontend/viewmodels/admin/: admin_vm.py
frontend/viewmodels/assessment/: assessment_vm.py  question_vm.py
frontend/viewmodels/auth/: login_vm.py  register_steps.py  register_vm.py
frontend/viewmodels/chat/: chat_message_vm.py  chat_vm.py
frontend/viewmodels/content_gen/: content_gen_vm.py
frontend/viewmodels/home/: home_vm.py
frontend/viewmodels/polyglot_puzzle/: attempt_vm.py  embeddings_view_vm.py  polyglot_puzzle_vm.py
frontend/viewmodels/profile/: assessment_history_vm.py  change_password_vm.py  interest_vm.py  profile_vm.py
frontend/viewmodels/review_writing/: review_writing_vm.py
frontend/viewmodels/rewrite_content/: rewrite_content_vm.py
frontend/viewmodels/shell/: navigation_vm.py  notification_center_vm.py  settings_vm.py  user_session_vm.py
frontend/views/: app_shell.py
frontend/views/admin/: admin_view.py
frontend/views/assessment/: assessment_view.py
frontend/views/auth/: login_view.py  register_view.py
frontend/views/chat/: chat_view.py  (+1 more)
(+113 files in other folders)
