[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kaveh <kaveh.razavi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.6.3"}
langchain-core = "^0.1.18"
langchain-community = "^0.0.17"
langchain-openai = "^0.0.5"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.2"
ollama = "^0.1.6"
langserve = {extras = ["all"], version = "^0.0.41"}
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.1"
gtts = "^2.5.1"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
