[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Kaveh <kaveh.razavi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
requests = "^2.31.0"
streamlit-option-menu = "^0.3.12"
websockets = "^12.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
httpx = "^0.26.0"
email-validator = "^2.1.1"
streamlit-authenticator = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
